--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ subprojects {
 		// Swagger
 //        implementation 'io.springfox:springfox-boot-starter:3.0.0'
 //        implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+		implementation 'org.apache.httpcomponents:httpclient:4.5.14'
 	}
 
 	test {
