--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,13 @@ subprojects {
 		// Swagger
 //        implementation 'io.springfox:springfox-boot-starter:3.0.0'
 //        implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+		// kakao access token
+		implementation group: 'org.json', name: 'json', version: '20210307'
+		implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+
+		implementation 'com.google.code.gson:gson:2.8.6'
+
 	}
 
 	test {
