feat: 사전예약 서버 기본 구현

--- a/build.gradle
+++ b/build.gradle
@@ -77,3 +77,12 @@ project(':suldaksuldak') {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 	}
 }
+
+project(':suldaksuldak-reservation') {
+	bootJar { enabled = true }
+	jar { enabled = false }
+
+	dependencies {
+		implementation project(':suldaksuldak-core')
+	}
+}
