--- a/suldaksuldak/src/main/resources/application.yml
+++ b/suldaksuldak/src/main/resources/application.yml
@@ -22,11 +22,24 @@ spring:
             redirect-uri: "http://localhost:8080/api/v1/oauth/kakao"
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            scope: account_email, age_range, birthday #동의 항목
+            scope: account_email,age_range,birthday,profile_nickname #동의 항목
             client-name: Kakao
+          naver:
+#            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
+            redirect-uri: 'http://localhost:8080/api/v1/oauth/naver'
+            authorization-grant-type: authorization_code
+            client-secret: dGE2n3Mrej
+            scope: name,email,nickname,gender,birtday
+            client-id: FaJvqOp2iYsiESXYnkeT
+            client-name: Naver
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+          naver:
+            user-name-attribute: response
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            token-uri: https://nid.naver.com/oauth2.0/token
