style: 사전예약 api에 swagger 적용

--- a/suldaksuldak-reservation/src/main/resources/application.yml
+++ b/suldaksuldak-reservation/src/main/resources/application.yml
@@ -9,3 +9,6 @@ spring:
     password: 1234
   main:
     allow-bean-definition-overriding: 'true'
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
