--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'multi-server-suldak'
 include 'suldaksuldak'
 include 'suldaksuldak-core'
 include 'suldaksuldak-reservation'
+include 'suldaksuldak-admin'
 
