--- a/suldaksuldak/src/main/resources/application.yml
+++ b/suldaksuldak/src/main/resources/application.yml
@@ -43,3 +43,6 @@ spring:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             user-info-uri: https://openapi.naver.com/v1/nid/me
             token-uri: https://nid.naver.com/oauth2.0/token
+
+jwt:
+  key: "SULDAKSULDAK_KEY"
