--- a/suldaksuldak-core/build.gradle
+++ b/suldaksuldak-core/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${project.querydslVersion}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
     annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // 역직렬화
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 test {
