--- a/suldaksuldak-core/build.gradle
+++ b/suldaksuldak-core/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     // 역직렬화
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 test {
