--- a/suldaksuldak/src/main/resources/application.yml
+++ b/suldaksuldak/src/main/resources/application.yml
@@ -22,19 +22,26 @@ spring:
           kakao:
             client-id: c14c29936ab91bf8d5ff8ccf7ab0c06f
             #          redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}"
-            redirect-uri: "http://localhost:8080/api/v1/oauth/kakao"
+            redirect-uri: "http://localhost:8080/api/auth/kakao"
             client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope: account_email,age_range,birthday,profile_nickname #동의 항목
             client-name: Kakao
           naver:
 #            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
-            redirect-uri: 'http://localhost:8080/api/v1/oauth/naver'
+            redirect-uri: 'http://localhost:8080/api/auth/naver'
             authorization-grant-type: authorization_code
             client-secret: dGE2n3Mrej
             scope: name,email,nickname,gender,birtday
             client-id: FaJvqOp2iYsiESXYnkeT
             client-name: Naver
+          google:
+            client-id: 1040088201011-1bc8jvilpj041bo9f8e1s7t3u93f1pgv.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: "http://localhost:8080/api/auth/google"
+            scope:
+              - email
+              - profile
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
@@ -46,6 +53,10 @@ spring:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             user-info-uri: https://openapi.naver.com/v1/nid/me
             token-uri: https://nid.naver.com/oauth2.0/token
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://oauth2.googleapis.com/token
+            resource-uri: https://www.googleapis.com/oauth2/v2/userinfo
 
 jwt:
   key: "SULDAKSULDAK_KEY"
