feat: FileBase Entity, Repo 생성 및 User Entity 수정

--- a/.gitignore
+++ b/.gitignore
@@ -147,4 +147,6 @@ suldaksuldak-core/src/main/generated
 suldaksuldak/src/main/generated
 **/generated
 
+**/temp/
+
 # End of https://www.toptal.com/developers/gitignore/api/gradle,java,intellij+all
