--- a/suldaksuldak/src/main/resources/application.yml
+++ b/suldaksuldak/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     allow-bean-definition-overriding: 'true'
 #  profiles:
 #    include: oauth
+  jpa:
+    properties:
+      hibernate:
+        use_sql_comments: true
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
