feat: 관리자 로그인 Swagger 수정 및 로그아웃 코드 수정

--- a/suldaksuldak-admin/src/main/resources/application.yml
+++ b/suldaksuldak-admin/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8083
+#  ssl:
+#    key-store: classpath:keystore.p12
+#    key-store-password: 140437
+#    keyStoreType: PKCS12
+#    keyAlias: mykey
 
 spring:
   datasource:
