fix: DB 자동 생성 설정
ddl-auto: create

--- a/suldaksuldak-reservation/src/main/resources/application.yml
+++ b/suldaksuldak-reservation/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     password: 1234
   main:
     allow-bean-definition-overriding: 'true'
+  jpa:
+    properties:
+      hibernate:
+        ddl-auto: create
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
