--- a/suldaksuldak/src/main/resources/application.yml
+++ b/suldaksuldak/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   jpa:
     properties:
       hibernate:
+        ddl-auto: create
         use_sql_comments: true
   mvc:
     pathmatch:
