--- a/suldaksuldak-admin/src/main/resources/application.yml
+++ b/suldaksuldak-admin/src/main/resources/application.yml
@@ -15,9 +15,8 @@ spring:
   main:
     allow-bean-definition-overriding: 'true'
   jpa:
-    properties:
       hibernate:
-        ddl-auto: create
+        ddl-auto: update
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
