--- a/suldaksuldak/src/main/resources/application.yml
+++ b/suldaksuldak/src/main/resources/application.yml
@@ -12,9 +12,8 @@ spring:
 #  profiles:
 #    include: oauth
   jpa:
-    properties:
       hibernate:
-        ddl-auto: create
+        ddl-auto: update
         use_sql_comments: true
   mvc:
     pathmatch:
