feat: Batch Server 초기 구현

--- a/build.gradle
+++ b/build.gradle
@@ -105,3 +105,12 @@ project(':suldaksuldak-admin') {
 		implementation project(':suldaksuldak-core')
 	}
 }
+
+project(':suldaksuldak-batch') {
+	bootJar { enabled = true }
+	jar { enabled = false }
+
+	dependencies {
+		implementation project(':suldaksuldak-core')
+	}
+}
