--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'suldaksuldak'
 include 'suldaksuldak-core'
 include 'suldaksuldak-reservation'
 include 'suldaksuldak-admin'
+include 'suldaksuldak-batch'
 
