--- a/suldaksuldak-admin/src/main/resources/application.yml
+++ b/suldaksuldak-admin/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     allow-bean-definition-overriding: 'true'
   jpa:
       hibernate:
-        ddl-auto: update
+        ddl-auto: validate
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
