--- a/suldaksuldak-admin/src/main/resources/application.yml
+++ b/suldaksuldak-admin/src/main/resources/application.yml
@@ -9,9 +9,12 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/suldaksuldak?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
-    username: root
-    password: 1234
+#    url: jdbc:mysql://localhost:3306/suldaksuldak?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://suldak-db.cfk6gcmaap5x.ap-northeast-2.rds.amazonaws.com:3306/suldaksuldak?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+#    username: root
+    username: suldak
+#    password: 1234
+    password: suldaksuldak
   main:
     allow-bean-definition-overriding: 'true'
   jpa:
