feat: AWS S3 기본 설정 및 application.yml 수정

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ subprojects {
 
 		implementation 'com.google.code.gson:gson:2.8.6'
 
+		// AWS
+		implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 	}
 
 	test {
