--- a/suldaksuldak-admin/src/main/resources/application.yml
+++ b/suldaksuldak-admin/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
 #    keyAlias: mykey
 
 spring:
+  profiles:
+    active: local
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/suldaksuldak?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
@@ -20,6 +22,24 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  servlet:
+    multipart:
+      max-request-size: 100MB
+      max-file_size: 100MB
 
 jwt:
   key: "SULDAKSULDAK_KEY"
+
+cloud:
+  aws:
+    s3:
+      enabled: false
+      bucket: suldak-images
+    credentials:
+      access-key: <accessKey>
+      secret-key: <secretKey>
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
